--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot for Discord",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts"
   },
   "author": "Ólafur Karl Stefánsson",
   "license": "ISC",
