--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "build": "tsc"
   },
   "author": "Ólafur Karl Stefánsson",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "@types/fast-levenshtein": "^0.0.4",
+    "@types/node-localstorage": "^1.3.3",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
+    "fast-levenshtein": "^3.0.0",
+    "node-localstorage": "^3.0.5",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.16",
-    "eslint": "^7.16.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@types/node": "^20.11.5",
+    "@types/ws": "^8.5.10",
+    "eslint": "^8.56.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
